# RemoteCar-Embedded

./: .gitignore  .gitmodules  README.md
auto-server/: .env  README.md  build_server.sh  package-lock.json  package.json  tsconfig.json  video_server  video_server.c
auto-server/data/: app.db  vehicle.db
auto-server/scripts/: install.sh
auto-server/src/: auth.ts  config.ts  db.ts  gpio.ts  index.ts  middleware.ts  routes.ts  security.ts  server.ts  types.ts  videoProxy.ts  ws.ts
auto-server/systemd/: proyecto.service
libraries/: CMakeLists.txt  build.conf  build.sh  control.c  gpio_test.c  main.c
libraries/build-arm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  comms  control  gpio_test  main
libraries/build-arm/lib/: Makefile  cmake_install.cmake
libraries/include/: gpio.h  movement.h
libraries/lib/: CMakeLists.txt  gpio.c  gpionop.c  movement.c
pinnet/: main  main.c
web/: global.css  next.config.js  package-lock.json  package.json  postcss.config.js
web/.next/: app-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
web/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
web/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js  lucide-react.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/static/webpack/: b3f5a9c845e92ea0.webpack.hot-update.json  webpack.0143fb566d232fc3.hot-update.js  webpack.020b3549ab69b107.hot-update.js  webpack.02101adcde8ad9a3.hot-update.js  webpack.02dad5cc2034502a.hot-update.js  webpack.02fee54f6efc83b6.hot-update.js  webpack.04c06b874ea1ceba.hot-update.js  webpack.0541a0b63b68723a.hot-update.js  webpack.05bb461e5ef4e5a6.hot-update.js  webpack.05c539f558e09414.hot-update.js  webpack.060b763da33a638f.hot-update.js  webpack.06dd10c9eacb75df.hot-update.js  webpack.07e758ff8efa4b1d.hot-update.js  webpack.082edf38fff679bc.hot-update.js  webpack.083a154fb610fded.hot-update.js  webpack.088e7e06e0beedf8.hot-update.js  webpack.09906be504b69466.hot-update.js  webpack.09b634f9802ad4a4.hot-update.js  webpack.09e334ef60863bad.hot-update.js  webpack.0a1521e3bbd57ef1.hot-update.js  webpack.0a1f623dff413186.hot-update.js  webpack.0a7e1fa04af70f8a.hot-update.js  webpack.0aa235bd3c337ec0.hot-update.js  webpack.0b407ec17ef6aae0.hot-update.js  webpack.0b4abadb9ac93e9f.hot-update.js  webpack.0c601c1fa7bfef89.hot-update.js  webpack.0c77201ee6959340.hot-update.js  webpack.0ce4290f1ccadf3c.hot-update.js  webpack.0d0a9607c7e02aeb.hot-update.js  webpack.0dee4f3a55969d24.hot-update.js  webpack.0e70979b20d7f82a.hot-update.js  webpack.0f19802d81133dbe.hot-update.js  webpack.106a94b5d68e7076.hot-update.js  webpack.1085114f4e076e37.hot-update.js  webpack.1096a45d058c56c2.hot-update.js  webpack.1186e29d57029109.hot-update.js  webpack.11b9ab8f18e80d1d.hot-update.js  webpack.11bc7464b31bc2e3.hot-update.js  (+610 more)
web/.next/types/: routes.d.ts  validator.ts
web/api/: api.ts
web/app/: layout.tsx  page.tsx
web/app/components/: joystick.tsx  status.tsx  stream.tsx
web/app/control/: control.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: stream.tsx
web/components/ui/: badge.tsx  button.tsx
web/control/: page.tsx
yocto_image/poky-scarthgap-5.0/poky/: .gitignore
(+1219 files in other folders)
